[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Braingames Project (Python back-end course)"
authors = ["Oleg Tikhonov <Oleg.Tikhonoff@gmail.com>"]
readme = "README.md"
repository = "https://github.com/ybny0nsr/python-project-49"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Other Audience",
  "Programming Language :: Python :: 3.10",
  "License :: Free For Educational Use",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Topic :: Education :: Testing",
  "Private :: Do Not Upload",
]

packages = [
  { include = "brain_games" },
]


[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"
colorama = "^0.4.6"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progr = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"
